--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: [ ubuntu:latest ]
+    runs-on: [ ubuntu ]
     steps:
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
