--- a/.github/workflows/dependent.yml
+++ b/.github/workflows/dependent.yml
@@ -7,29 +7,29 @@ on:
     types: 
       - completed
 
-# jobs:
-#   test:
-#     name: Test
-#     runs-on: linux
-#     steps:
-#     - name: Set up Go 1.x
-#       uses: actions/setup-go@v2
-#       with:
-#         go-version: ^1.16
-#       id: go
-
-
-
 jobs:
-  test-job:
-    name: Test Step
-    runs-on: ubuntu-latest
+  test:
+    name: Test
+    runs-on: linux
     steps:
-      - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.workflow_run.head_branch }}
-      - run: git branch
-      - run: env
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.16
+      id: go
+
+
+
+# jobs:
+#   test-job:
+#     name: Test Step
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           ref: ${{ github.event.workflow_run.head_branch }}
+#       - run: git branch
+#       - run: env
 
 
 # added comment
